// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reports action 1`] = `
Object {
  "details": Object {
    "action": Object {
      "data": Object {
        "name": "John",
      },
      "id": 100,
      "type": "CHANGE_USER",
    },
    "meta": Object {
      "id": Array [
        1487805099387,
        "100:H10Nf5stl",
        0,
      ],
      "reasons": Array [
        "lastValue",
        "debug",
      ],
      "server": "server:H1f8LAyzl",
      "time": 1487805099387,
      "user": "100:H10Nf5stl",
    },
    "time": 2017-02-22T23:11:39.387Z,
  },
  "level": "info",
  "msg": "Action was added",
}
`;

exports[`reports authenticated 1`] = `
Object {
  "details": Object {
    "clientId": "1",
    "nodeId": "100:H10Nf5stl",
    "subprotocol": "1.0.0",
  },
  "level": "info",
  "msg": "User was authenticated",
}
`;

exports[`reports authenticated without user ID 1`] = `
Object {
  "details": Object {
    "clientId": "1",
    "nodeId": "H10Nf5stl",
    "subprotocol": "1.0.0",
  },
  "level": "info",
  "msg": "User was authenticated",
}
`;

exports[`reports bad authenticated 1`] = `
Object {
  "details": Object {
    "clientId": "1",
    "nodeId": "100:H10Nf5stl",
    "subprotocol": "1.0.0",
  },
  "level": "warn",
  "msg": "Bad authentication",
}
`;

exports[`reports clean 1`] = `
Object {
  "details": Object {
    "actionId": Array [
      1487805099387,
      "100:H10Nf5stl",
      0,
    ],
  },
  "level": "info",
  "msg": "Action was cleaned",
}
`;

exports[`reports client error 1`] = `
Object {
  "details": Object {
    "nodeId": "100:H10Nf5stl",
  },
  "level": "warn",
  "msg": "Client error: A timeout was reached (5000ms)",
}
`;

exports[`reports connect 1`] = `
Object {
  "details": Object {
    "clientId": "1",
    "ipAddress": "127.0.0.1",
  },
  "level": "info",
  "msg": "Client was connected",
}
`;

exports[`reports denied 1`] = `
Object {
  "details": Object {
    "actionId": Array [
      1487805099387,
      "100:H10Nf5stl",
      0,
    ],
  },
  "level": "info",
  "msg": "Action was denied",
}
`;

exports[`reports destroy 1`] = `
Object {
  "level": "info",
  "msg": "Shutting down Logux server",
}
`;

exports[`reports disconnect 1`] = `
Object {
  "details": Object {
    "nodeId": "100:H10Nf5stl",
  },
  "level": "info",
  "msg": "Client was disconnected",
}
`;

exports[`reports disconnect from unauthenticated user 1`] = `
Object {
  "details": Object {
    "clientId": "1",
  },
  "level": "info",
  "msg": "Client was disconnected",
}
`;

exports[`reports error 1`] = `
Object {
  "details": Object {
    "actionID": Array [
      1487805099387,
      "100:H10Nf5stl",
      0,
    ],
  },
  "level": "error",
  "msg": [Error: Some mistake],
}
`;

exports[`reports error from unautheficated user 1`] = `
Object {
  "details": Object {
    "clientId": "1",
  },
  "level": "error",
  "msg": "SyncError from client: A timeout was reached (5000ms)",
}
`;

exports[`reports http 1`] = `
Object {
  "details": Object {
    "environment": "development",
    "listen": "Custom HTTP server",
    "loguxServer": "0.1.1",
    "nodeId": "server:H1f8LAyzl",
    "subprotocol": "1.0.0",
    "supports": "1.x",
  },
  "level": "info",
  "msg": "Logux server is listening in non-secure development mode",
}
`;

exports[`reports listen 1`] = `
Object {
  "details": Object {
    "environment": "development",
    "listen": "ws://127.0.0.1:1337",
    "loguxServer": "0.1.1",
    "nodeId": "server:H1f8LAyzl",
    "subprotocol": "2.5.0",
    "supports": "2.x || 1.x",
  },
  "level": "info",
  "msg": "Logux server is listening in non-secure development mode",
}
`;

exports[`reports processed 1`] = `
Object {
  "details": Object {
    "actionId": Array [
      1487805099387,
      "100:H10Nf5stl",
      0,
    ],
    "duration": 500,
  },
  "level": "info",
  "msg": "Action was processed",
}
`;

exports[`reports production 1`] = `
Object {
  "details": Object {
    "environment": "production",
    "listen": "wss://0.0.0.0:1337",
    "loguxServer": "0.1.1",
    "nodeId": "server:H1f8LAyzl",
    "subprotocol": "1.0.0",
    "supports": "1.x",
  },
  "level": "info",
  "msg": "Logux server is listening",
}
`;

exports[`reports synchroniation error 1`] = `
Object {
  "details": Object {
    "nodeId": "100:H10Nf5stl",
  },
  "level": "error",
  "msg": "SyncError: A timeout was reached (5000ms)",
}
`;

exports[`reports zombie 1`] = `
Object {
  "details": Object {
    "nodeId": "100:H10Nf5stl",
  },
  "level": "info",
  "msg": "Zombie client was disconnected",
}
`;
